ratelimit/envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: default
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 8888
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    codec_type: AUTO
                    stat_prefix: ingress
                    http_filters:
                      # rateLimit HTTP限速过滤器
                      - name: envoy.filters.http.ratelimit
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                          domain: rl
                          request_type: both
                          stage: 0
                          rate_limited_as_resource_exhausted: true
                          failure_mode_deny: true
                          enable_x_ratelimit_headers: DRAFT_VERSION_03
                          rate_limit_service:
                            grpc_service:
                              envoy_grpc:
                                cluster_name: ratelimit
                            transport_api_version: V3
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    route_config:
                      name: route
                      virtual_hosts:
                        - name: backend
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: /
                              route:
                                cluster: mock
                                auto_host_rewrite: true
                                rate_limits:
                                  - actions:
                                      - request_headers:
                                          header_name: "x-user-value"
                                          descriptor_key: "user"
      clusters:
        # 用于配置上游rateLimit地址
        - name: ratelimit
          type: STRICT_DNS
          connect_timeout: 1s
          lb_policy: ROUND_ROBIN
          protocol_selection: USE_CONFIGURED_PROTOCOL
          http2_protocol_options: { }
          load_assignment:
            cluster_name: ratelimit
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: ratelimit-svc.default.svc.cluster.local
                          port_value: 8081
        # 用于配置上游服务地址(当前仅配置www.baidu.com)
        - name: mock
          connect_timeout: 1s
          type: LOGICAL_DNS
          dns_lookup_family: V4_ONLY
          load_assignment:
            cluster_name: mock
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: www.baidu.com
                          port_value: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: envoy-pod
  namespace: default
  labels:
    app: envoy
spec:
  containers:
    - name: envoyproxy
      image: envoyproxy/envoy:v1.28.0
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8888
      volumeMounts:
        - name: envoyconfig
          mountPath: /etc/envoy/
  volumes:
    - name: envoyconfig
      configMap:
        defaultMode: 0655
        name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-svc
  namespace: default
spec:
  selector:
    app: envoy
  type: LoadBalancer
  ports:
    - name: envoy
      protocol: TCP
      port: 8888
      targetPort: 8888
