ratelimit/ratelimit.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ratelimit-config
  namespace: default
data:
  demo.yaml: |
    domain: rl
    descriptors:
      - key: user
        value: jane
        rate_limit:
          unit: minute
          requests_per_unit: 1
  demo1.yaml: |
    domain: rl2
    descriptors:
      - key: user
        value: tome
        rate_limit:
          unit: minute
          requests_per_unit: 2
---
apiVersion: v1
kind: Pod
metadata:
  name: "ratelimit-pod"
  namespace: default
  labels:
    app: "ratelimit"
spec:
  containers:
    - name: ratelimit-container
      image: envoyproxy/ratelimit:master
      command:
        - /bin/ratelimit
      env:
        - name: LOG_FORMAT
          value: json
        - name: LOG_LEVEL
          value: debug
        - name: REDIS_SOCKET_TYPE
          value: tcp
        - name: REDIS_URL
          value: 10.96.187.149:6379
        - name: RUNTIME_ROOT
          value: /data
        - name: RUNTIME_SUBDIRECTORY
          value: ratelimit
        - name: RUNTIME_WATCH_ROOT
          value: "false"
        - name: USE_STATSD
          value: "false"
        - name: MERGE_DOMAIN_CONFIG
          value: "true"
      ports:
        - containerPort: 8080
        - containerPort: 8081
        - containerPort: 6070
      volumeMounts:
        - name: ratelimit-config
          mountPath: /data/ratelimit/config
          # 指定subPath为config, 这样就不会使用"..data"目录接受configMap的更新
          subPath: config
  volumes:
    - name: ratelimit-config
      configMap:
        name: ratelimit-config
        items:
          - key: demo.yaml
            path: config/demo.yaml
          - key: demo1.yaml
            path: config/demo1.yaml          
---
apiVersion: v1
kind: Service
metadata:
  name: ratelimit-svc
  namespace: default
spec:
  selector:
    app: ratelimit
  type: LoadBalancer
  ports:
    - name: ratelimit-http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: ratelimit-grpc
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: ratelimit-debug
      protocol: TCP
      port: 6070
      targetPort: 6070
