ratelimit/start.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ratelimit-config
  namespace: default
data:
  config.yaml: |
    domain: rl
    descriptors:
      - key: user
        value: jane
        rate_limit:
          unit: minute
          requests_per_unit: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: "ratelimit-pod"
  namespace: default
  labels:
    app: "ratelimit"
spec:
  containers:
    - name: ratelimit-container
      image: envoyproxy/ratelimit:master
      command:
        - /bin/ratelimit
      env:
        - name: LOG_LEVEL
          value: debug
        - name: REDIS_SOCKET_TYPE
          value: tcp
        - name: REDIS_URL
          value: 10.96.187.149:6379
        - name: RUNTIME_ROOT
          value: /data
        - name: RUNTIME_SUBDIRECTORY
          value: ratelimit
        - name: RUNTIME_WATCH_ROOT
          value: "false"
        - name: USE_STATSD
          value: "false"
      ports:
        - containerPort: 8080
        - containerPort: 8081
        - containerPort: 6070
      volumeMounts:
        - name: ratelimit-config
          mountPath: /data/ratelimit/
  volumes:
    - name: ratelimit-config
      configMap:
        name: ratelimit-config
---
apiVersion: v1
kind: Service
metadata:
  name: ratelimit-svc
  namespace: default
spec:
  selector:
    app: ratelimit
  type: LoadBalancer
  ports:
    - name: ratelimit-http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: ratelimit-grpc
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: ratelimit-debug
      protocol: TCP
      port: 6070
      targetPort: 6070
